docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/sameday-express-delivery/component/_sameday-express-pdp.scss
.acq-content-product {
  #express-delivery-options {
    border-bottom: none;

    .cart-shipping-method {
      .shipping-method-detail-wrapper {
        .method-title {
          font-size: 0.6875rem;
          letter-spacing: 0.0625rem;
          line-height: 1.2;
          text-transform: none;
          color: $spc-product-attributes;
        }
      }
    }
  }
}

.ui-state-active {
  .c-accordion__title {
    &::after {
      top: 1rem;
    }
  }
}

.c-accordion__title {
  &::after {
    transition: transform 0.3s ease-in-out;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

